--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,9 @@ edition = "2021"
 [dependencies]
 hex = "0.4.3"
 bitcoin-network = { git = "https://github.com/cyber-coop/bitcoin-network", branch = "main" }
-magic-bytes = { git = "https://github.com/cyber-coop/magic-bytes", branch = "main" }
+magic-bytes = "0.1.0"
+postgres = { version = "0.19" }
+log = "0.4"
+env_logger = "0.11"
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.8"
