--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Checkout Repo 
         uses: actions/checkout@v4
-      - run: rustup update nightly && rustup default nightly
+      - run: rustup update nightly && rustup default nightly && rustup component add rustfmt
       - name: Enforce formatting
         run: cargo fmt --check
 
