--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ authors = ["Lola Rigaut-Luczak <me@laflemme.lol>"]
 
 [dependencies]
 hex = "0.4.3"
-bitcoin-network = { git = "https://github.com/cyber-coop/bitcoin-network", branch = "main" }
+bitcoin-network = { git = "https://github.com/cyber-coop/bitcoin-network", branch = "deps/update" }
 magic-bytes = "0.1.0"
 postgres = { version = "0.19" }
 log = "0.4"
