--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,11 +15,11 @@ jobs:
       - name: Enforce formatting
         run: cargo fmt --check
 
-  # test:
-  #   name: Tests
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: Checkout Repo 
-  #     uses: actions/checkout@v3
-  #   - name: Run tests
-  #     run: cargo test --verbose
+  test:
+    name: Tests
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout Repo 
+      uses: actions/checkout@v3
+    - name: Run tests
+      run: cargo test --verbose
